force-app/main/default/objects/CouponItem__c/CouponItem__c.object-meta.xml
<CustomObject>
    <label>Coupon Item</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coupon Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>