force-app/main/default/objects/CouponItem__c/fields/Coupon__c.field-meta.xml
<CustomField>
    <fullName>Coupon__c</fullName>
    <label>Coupon</label>
    <referenceTo>Coupon__c</referenceTo>
    <relationshipLabel>Coupon Items</relationshipLabel>
    <relationshipName>CouponItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>