force-app/main/default/objects/CouponItem__c/fields/Utilise__c.field-meta.xml
<CustomField>
    <fullName>Utilise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Utilise</label>
    <type>Checkbox</type>
</CustomField>