force-app/main/default/objects/CouponItem__c/recordTypes/BtoB.recordType-meta.xml
<RecordType>
    <fullName>BtoB</fullName>
    <active>true</active>
    <label>BtoB</label>
</RecordType>