force-app/main/default/objects/CouponItem__c/recordTypes/BtoCMultiples.recordType-meta.xml
<RecordType>
    <fullName>BtoCMultiples</fullName>
    <active>true</active>
    <label>BtoC multiples</label>
</RecordType>